library/general/containerlimits/samples/container-must-have-limits/limits_nopermitido.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limits-nopermitido
  labels:
    owner: luis.merino      
    app: httpd
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd-limits-nopermitido
        image: "quay.io/centos7/httpd-24-centos7"
