library/general/containerlimits/samples/container-must-have-limits/limits_permitido.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: limits-permitido
  labels:
    owner: luis.merino      
    app: httpd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
      - name: httpd-limits-permitido
        image: "quay.io/centos7/httpd-24-centos7"
        resources:
          requests:
            memory: "200M"
            cpu: "200m"
          limits:
            memory: "2G"
            cpu: "1"
