library/general/containerlimits/samples/container-must-have-limits/constraint-warn.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits-warn
  namespace: lmt-gatekeeper-warn
spec:
  enforcementAction: warn 
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpu: "1"
    memory: "2Gi"
