library/general/containerlimits/samples/container-must-have-limits/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerLimits
metadata:
  name: container-must-have-limits
  namespace: lmt-gatekeeper
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    cpu: "1"
    memory: "2Gi"
